[tool.poetry]
name = "pyspark-demo"
version = "0.1.0"
description = ""
authors = ["Josh Carver <joshc@ginger.io>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
